<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ChangePins</string>
    <string name="drawer_open">Open Drawer</string>
    <string name="drawer_close">Close Drawer</string>

    <string name="app_id">1101829736603185</string>

    <string-array name="nav_drawer_list_menu">
        <item>Home</item>
        <item>Reports</item>
        <item>Places</item>
        <item>About</item>
        <item>Help</item>
        <item>Logout</item>
    </string-array>

    <string name="title_activity_maps">Map</string>
    <string name="but_location">Set Location</string>


    <string name="title_activity_report">Report</string>
    <string name="title_activity_join">Volunteer</string>

    <string name="ip">192.168.0.101:5000/cityalert/api/1.0/</string>
    <string name="ip2">http://192.168.11.84/check.php</string>
    <string name="title_activity_fblogin">FBLogin</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_location">LocationActivity</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_notice_board">NoticeBoard</string>

    <!--Analytics Categories-->
    <string name="buttons">BUTTONS</string>
    <string name="views">VIEWS</string>
    <string name="dialogs">Dialogs</string>

    <!-- Analytics Actions-->
    <string name="click">CLICK</string>
    <string name="cancel">Cancel</string>
    <string name="longclick">Long click</string>

    <!-- Analytics labels-->
    <string name="skip">SKIP</string>
    <string name="private_sec">PRIVATE</string>
    <string name="public_sec">PUBLIC</string>

                <!--social-->
    <string name="electricity">Electricity</string>
    <string name="watersupply">Water Supply</string>
    <string name="housing">Housing</string>
    <string name="education">Education</string>
    <string name="trees">Trees</string>
    <string name="nutrition">Nutrition</string>

    <string name="electricityDescription">Tell us about issues like lack of power or misuse of energy etc.</string>
    <string name="watersupplyDescription"> Tell us about issues like lack of water or misuse of water etc.</string>
    <string name="treesDescription">Tell us about issues like cutting of trees or lack of tree cover etc.</string>
    <string name="housingDescription">Tell us about issues like poor construction, illegal buildings etc.</string>
    <string name="educationDescription">Tell us about issues like lack of resources at schools etc.</string>
    <string name="nutritionDescription">Tell us about issues like food wastage, bad quality of food etc.</string>

                <!--public-->
    <string name="transport">Transport</string>
    <string name="utilities">Utilities</string>
    <string name="wastemanagement">Waste Management</string>
    <string name="safety">Safety</string>
    <string name="publicspaces">Public Spaces</string>
    <string name="services">Services</string>


    <string name="transportDescription">Tell us about issues like crowded public transport etc.</string>
    <string name="utilitiesDescription">Tell us about issues like malfunctioning of street lights etc.</string>
    <string name="wastemanagementDescription">Tell us about garbage dumping, public littering etc.</string>
    <string name="publicspaceDescription">Tell us about unclean public spaces, undesignated parking etc.</string>
    <string name="safetyDescription">Tell us about potential crime, violations, dangers etc.</string>
    <string name="servicesDescription">Tell us about issues related to lack of services and response</string>

                <!--Actionbar icons-->
    <string name="report">Report</string>
    <string name="buzz">Buzz</string>
    <string name="home">Title/Home</string>

                <!--Navigation Drawer-->
    <string name="myreports">Reports</string>
    <string name="myplaces">Places</string>
    <string name="about">About</string>
    <string name="help">Help</string>
    <string name="logout">Logout</string>

                <!--Reporting page-->
    <string name="succesfulreport">Reported Successfully</string>


    <string name="createprofile">Create Profile</string>
    <string name="registercomplaint">Register Complaint</string>

    <!--Strings for shared preferences-->
    <string name="user_preferences">user preferences</string>
    <string name="username">username</string>
    <string name="user_email">user email</string>
    <string name="user_image">user image</string>
    <string name="database">db</string>

</resources>