<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="10dp"
    android:background="@android:color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp">

        <sandeep.city.Views.ViewIconTitle
            android:id="@+id/iiElectricity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:image_icon="@drawable/electricitybulb"
            app:title_name="@string/electricity"
            app:titleSize="6sp"></sandeep.city.Views.ViewIconTitle>

        <sandeep.city.Views.ViewIconTitle
            android:id="@+id/iiWaterSupply"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:image_icon="@drawable/watersupply"
            app:title_name="@string/watersupply"
            app:titleSize="6sp">

        </sandeep.city.Views.ViewIconTitle>


        <sandeep.city.Views.ViewIconTitle
            android:id="@+id/iiGender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:image_icon="@drawable/genderissues"
            app:title_name="@string/gender"
            app:titleSize="6sp">

        </sandeep.city.Views.ViewIconTitle>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp">

        <sandeep.city.Views.ViewIconTitle
            android:id="@+id/iiHousing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:image_icon="@drawable/housing"
            app:title_name="@string/housing"
            app:titleSize="6sp">
        </sandeep.city.Views.ViewIconTitle>

        <sandeep.city.Views.ViewIconTitle
            android:id="@+id/iiEducation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:image_icon="@drawable/education"
            app:title_name="@string/education"
            app:titleSize="6sp">

        </sandeep.city.Views.ViewIconTitle>

        <sandeep.city.Views.ViewIconTitle
            android:id="@+id/iiNutrition"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:image_icon="@drawable/nutritionnew"
            app:title_name="@string/nutrition"
            app:titleSize="6sp">

        </sandeep.city.Views.ViewIconTitle>
    </LinearLayout>


    <Button
        android:id="@+id/bSocial"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/others_background"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="Others"
        android:layout_gravity="center"
        android:textColor="#FFFFFF"
        android:textStyle="bold" />
</LinearLayout>